# cookbook_api

./: .dockerignore  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0058950a8236_correct_names_of_models.py  4262086f072e_init_migration.py
app/: .env.template  config.py  database.py  main.py  models.py  queries.py  router.py  schemas.py
app/utils/: some_data.py
